--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,10 @@ dependencies = [
     "flake8 (>=7.2.0,<8.0.0)",
     "uvicorn (>=0.34.2,<0.35.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "transformers (>=4.51.3,<5.0.0)"
+    "transformers (>=4.51.3,<5.0.0)",
+    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
+    "passlib[argon2] (>=1.7.4,<2.0.0)",
+    "bcrypt (>=4.3.0,<5.0.0)"
 ]
 
 
